# fordwrench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/fordwrench/: cli.py  commands.py  config.py  snapshot.py
src/fordwrench/adapter/: elm.py
src/fordwrench/asbuilt/: block.py
src/fordwrench/data/: modules.yaml
src/fordwrench/transport/: base.py  serial_port.py
src/fordwrench/uds/: client.py  dtc.py  errors.py
tests/: test_cli.py  test_commands.py  test_config.py  test_smoke.py  test_snapshot.py
tests/adapter/: test_elm_adapter.py
tests/asbuilt/: test_block.py
tests/transport/: test_mock_transport.py  test_serial_discovery.py
tests/uds/: test_client.py  test_dtc.py
