[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fordwrench"
version = "0.1.0"
description = "Open-source CLI for reading/writing Ford As-Built module config over OBD-II"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fordwrench = "fordwrench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fordwrench"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
